--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "<!DOCTYPE html>    <html lang=\"en\">    <head>     <meta charset=\"UTF-8\">     <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">     <meta http-equiv=\"X-UA-Compatible\" content=\"ie=edge\">     <title>Portfolio Demo</title>   </head>",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DJS593/readme-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DJS593/readme-generator/issues"
+  },
+  "homepage": "https://github.com/DJS593/readme-generator#readme"
 }
